<resources>
    <string name="app_name">pamo-s24261</string>

    <string name="hint_weight">Masa (kg)</string>
    <string name="hint_height">Wzrost (m)</string>
    <string name="btn_calculate">Oblicz</string>

    <string name="app_logo">Logo aplikacji</string>

    <string name="bmi_calculator">Kalkulator BMI</string>
    <string name="calories_calculator">Kalkulator kalorii</string>
    <string name="daily_requirement">Twoje dzienne zapotrzebowanie:</string>
    <string name="show_recipes">Zobacz przepisy</string>
    <string name="calories_age">Wiek</string>
    <string name="calories_weight">Waga (kg)</string>
    <string name="calories_height">Wzrost (cm)</string>
    <string name="calories_male">Mężczyzna</string>
    <string name="calories_female">Kobieta</string>
    <string name="calories_calculate">Oblicz zapotrzebowanie</string>

    <string-array name="activity_levels">
        <item>Brak aktywności</item>
        <item>Umiarkowana aktywność</item>
        <item>Wysoka aktywność</item>
    </string-array>

    <string name="splash_fragment_label">Ekran powitalny</string>
    <string name="home_fragment_label">Strona główna</string>
    <string name="calculator_fragment_label">Kalkulator BMI</string>
    <string name="result_fragment_label">Wynik BMI</string>
    <string name="calories_fragment_label">Kalkulator kalorii</string>
    <string name="calories_result_fragment_label">Zapotrzebowanie kaloryczne</string>
    <string name="recipes_fragment_label">Rekomendacje kulinarne</string>

    <string name="shopping_list_label">Lista zakupów</string>
    <string name="bmi_chart_label">Wykres BMI</string>
</resources>