<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.pamo_s24261.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.pamo_s24261.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_calculatorFragment"
            app:destination="@id/calculatorFragment" />
        <action
            android:id="@+id/action_homeFragment_to_caloriesFragment"
            app:destination="@id/caloriesFragment" />
    </fragment>

    <fragment
        android:id="@+id/calculatorFragment"
        android:name="com.example.pamo_s24261.CalculatorFragment"
        android:label="@string/calculator_fragment_label"
        tools:layout="@layout/fragment_calculator">
        <action
            android:id="@+id/action_calculatorFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>

    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.pamo_s24261.ResultFragment"
        android:label="@string/result_fragment_label"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/caloriesFragment"
        android:name="com.example.pamo_s24261.CaloriesFragment"
        android:label="@string/calories_fragment_label"
        tools:layout="@layout/fragment_calories">
        <action
            android:id="@+id/action_caloriesFragment_to_caloriesResultFragment"
            app:destination="@id/caloriesResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/caloriesResultFragment"
        android:name="com.example.pamo_s24261.CaloriesResultFragment"
        android:label="@string/calories_result_fragment_label"
        tools:layout="@layout/fragment_calories_result">
        <action
            android:id="@+id/action_caloriesResultFragment_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </fragment>

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.pamo_s24261.RecipesFragment"
        android:label="@string/recipes_fragment_label"
        tools:layout="@layout/fragment_recipes" />
</navigation>
